Adding javascript to museum and tshirt projects

--- a/museumPage.html
+++ b/museumPage.html
@@ -214,7 +214,7 @@
 
 </body>
 
-<script type="text/javascript" src="js/museumJS/jquery-3.2.0.min.js"></script>
-<script type="text/javascript" src="js/museumJS/general.js"></script>
+<script type="text/javascript" src="assets/museumJS/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="assets/museumJS/general.js"></script>
 
 </html>
