--- a/shirtWidget.html
+++ b/shirtWidget.html
@@ -249,8 +249,8 @@
 
 	</body>
 
-<script type="text/javascript" src="js/tShirtJS/jquery-3.2.0.min.js"></script>
-<script type="text/javascript" src="js/tShirtJS/general.js"></script>
+<script type="text/javascript" src="assets/tShirtJS/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="assets/tShirtJS/general.js"></script>
 
 </html>
 
