Adding font awesome cdn

--- a/museumPage.html
+++ b/museumPage.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Columbia Museum Homepage</title>
 	<link rel="stylesheet" type="text/css" href="assets/museumCss/museumCSS.css">
-	<link rel="stylesheet" type="text/css" href="assets/museumCss/font-awesome.min.css">
+	<!--<link rel="stylesheet" type="text/css" href="assets/museumCss/font-awesome.min.css">-->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -215,6 +215,7 @@
 </body>
 
 <script type="text/javascript" src="assets/museumJS/jquery-3.2.0.min.js"></script>
+<script src="https://use.fontawesome.com/6bb3f4ecb9.js"></script>
 <script type="text/javascript" src="assets/museumJS/general.js"></script>
 
 </html>
