--- a/shirtWidget.html
+++ b/shirtWidget.html
@@ -9,7 +9,7 @@
 		<title></title>
 		
 		<link rel="stylesheet" type="text/css" href="assets/tShirtCss/style.css">
-		<link rel="stylesheet" type="text/css" href="assets/tShirtCss/font-awesome.min.css">
+		<!--<link rel="stylesheet" type="text/css" href="assets/tShirtCss/font-awesome.min.css">-->
 
 	</head>
 
@@ -250,6 +250,7 @@
 	</body>
 
 <script type="text/javascript" src="assets/tShirtJS/jquery-3.2.0.min.js"></script>
+<script src="https://use.fontawesome.com/6bb3f4ecb9.js"></script>
 <script type="text/javascript" src="assets/tShirtJS/general.js"></script>
 
 </html>
